--- a/index.html
+++ b/index.html
@@ -130,18 +130,18 @@
 		</div>
 		<div class="matkul full-w flex flexAlignCenter">
 			<h1 style="text-align: center; color: black">TEMUKAN MATERI PELAJARAN APAPUN</h1>
-			<div class="menu-matkul">
+			<div class="menu-matkul" id="MenuMatkulZenius">
 				<ul class="matkulMenu titleMatkul" id="matakul">
-					<li class="active2" id="mat"><a href="">MATEMATIKA</a></li>
-					<li id="ipa"><a href="">IPA</a></li>
-					<li id="ips"><a href="">IPS</a></li>
-					<li id="bhs"><a href="">BAHASA</a></li>
+					<li class="active2" id="mat"><a>MATEMATIKA</a></li>
+					<li id="ipa"><a>IPA</a></li>
+					<li id="ips"><a>IPS</a></li>
+					<li id="bhs"><a>BAHASA</a></li>
 				</ul>
 				<div class="kurikulum mn-kul">
 					<ul class="matkulMenu" id="scdMatkul">
-						<li id="ktsp" class="active2"><a href="">KTSP</a></li>
-						<li id="k13"><a href="">KURIKULUM 2013</a></li>
-						<li id="k13r"><a href="">KURIKULUM 2013 REVISI</a></li>
+						<li id="ktsp" class="active2"><a>KTSP</a></li>
+						<li id="k13"><a>KURIKULUM 2013</a></li>
+						<li id="k13r"><a>KURIKULUM 2013 REVISI</a></li>
 					</ul>
 				</div>
 				<div class="link-matkul">
