--- a/tugas/lucky/Latihan/BelajarMandiri/index.html
+++ b/tugas/lucky/Latihan/BelajarMandiri/index.html
@@ -16,14 +16,14 @@
     <!-- Menu -->
     <div class="head">
         <div class="head1 full-w flex centerMargin">
-            <img src="img/logo-zeniusnet3.png" height="50">
+            <img src="https://abdfaisol.github.io/zenius/img/logo-zeniusnet3.png" height="50">
             <div class="head2">
                 <ul>
-                    <li><a href="tugas/faisol/Sign-up.html">SIGN UP</a></li>
-                    <li><a href="tugas/faisol/log-in.html">LOG IN</a></li>
+                    <li><a href="https://abdfaisol.github.io/zenius/tugas/faisol/Sign-up.html">SIGN UP</a></li>
+                    <li><a href="https://abdfaisol.github.io/zenius/tugas/faisol/log-in.html">LOG IN</a></li>
                     <li>MEMBERSHIP
                         <ul>
-                            <li><a href="tugas/faisol/membership.html">beli</a></li>
+                            <li><a href="https://abdfaisol.github.io/zenius/tugas/faisol/membership.html">beli</a></li>
                             <li>beli</li>
                             <li>beli</li>
                         </ul>
@@ -255,7 +255,7 @@
                                                                     <div class="col-sm-3">
                                                                         <ul>
                                                                             <li><a href="">Title</a></li>
-                                                                            <li><a href="tugas\lucky\Latihan\Materi">beliKinematika</a></li>
+                                                                            <li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Materi">Kinematika</a></li>
                                                                             <li><a href="">List</a></li>
                                                                             <li><a href="">List</a></li>
                                                                             <li><a href="">List</a></li>
@@ -406,7 +406,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="tugas\lucky\Latihan\BelajarMandiri">Belajar Mandiri</a>
+                                <a class="nav-link" href="https://abdfaisol.github.io/zenius/tugas/lucky/BelajarMandiri">Belajar Mandiri</a>
                             </li>
                         </ul>
                         <form class="form-inline my-2 my-lg-0 relative">
@@ -487,133 +487,133 @@
 
     <!-- Belajar Mandiri -->
     <!-- Footer -->
-    <div class="footer">
-        <div class="footer2-atas">
-            <div class="con-fa">
-                <div class="con2-fa">
-                    <div class="kiri-fa">
-                        <ul>
-                            <h4>TENTANG KAMI</h4>
-                            <li>
-                                <a href="#">About Us</a>
-                            </li>
-                            <li>
-                                <a href="#">We Are Hiring</a>
-                            </li>
-                            <li>
-                                <a href="#">Testimonial</a>
-                            </li>
-                        </ul>
-                        <ul>
-                            <h4>SOCIAL MEDIA</h4>
-                            <li>
-                                <a href="#">Facebook</a>
-                            </li>
-                            <li>
-                                <a href="#">Twitter</a>
-                            </li>
-                            <li>
-                                <a href="#">Instagram</a>
-                            </li>
-                            <li>
-                                <a href="#">Tiktok</a>
-                            </li>
-                            <li>
-                                <a href="#">Youtube</a>
-                            </li>
-                            <li>
-                                <a href="#">LINE</a>
-                            </li>
-                        </ul>
-                        <ul>
-                            <h4>HUBUNGI KAMI</h4>
-                            <li>
-                                <a href="#">Kontak</a>
-                            </li>
-                            <li>
-                                <a href="#">Cuctomer Service</a>
-                            </li>
-                            <li>
-                                <a href="#">Bantuan pertanyaan</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="tengah-fa">
-                        <ul>
-                            <h4>KONTEN</h4>
-                            <li>
-                                <a href="#">SNMPTN</a>
-                            </li>
-                            <li>
-                                <a href="#">UTBK</a>
-                            </li>
-                            <li>
-                                <a href="#">Ujian Mandiri</a>
-                            </li>
-                            <li>
-                                <a href="#">Blog</a>
-                            </li>
-                            <li>
-                                <a href="#">Download Soal</a>
-                            </li>
-                            <li>
-                                <a href="#">Simulasi UTBK SBMPTN</a>
-                            </li>
-                            <li>
-                                <a href="#">Prolog Materi</a>
-                            </li>
-                            <li>
-                                <a href="#">CPNS</a>
-                            </li>
-                        </ul>
-                        <ul>
-                            <h4>MEMBERSHIP</h4>
-                            <li>
-                                <a href="#">Pesan membership</a>
-                            </li>
-                            <li>
-                                <a href="#">Panduan transaksi</a>
-                            </li>
-                            <li>
-                                <a href="#">Aktivasi membership</a>
-                            </li>
-                            <li>
-                                <a href="#">Konfirmasi pembayaran</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="kanan-fa">
-                        <ul>
-                            <h4>HAK CIPTA</h4>
-                            <li>
-                                <a href="#">Ketentuan Pengguna</a>
-                            </li>
-                            <li>
-                                <a href="#">Kebijakan Privasi</a>
-                            </li>
-                        </ul>
-                        <div class="logo-footer">
-                            <img src="img/logo-f.png">
-                        </div>
+<div class="footer">
+    <div class="footer2-atas">
+        <div class="con-fa">
+            <div class="con2-fa">
+                <div class="kiri-fa">
+                    <ul>
+                        <h4>TENTANG KAMI</h4>
+                        <li>
+                            <a href="#">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#">We Are Hiring</a>
+                        </li>
+                        <li>
+                            <a href="#">Testimonial</a>
+                        </li>
+                    </ul>
+                    <ul>
+                        <h4>SOCIAL MEDIA</h4>
+                        <li>
+                            <a href="#">Facebook</a>
+                        </li>
+                        <li>
+                            <a href="#">Twitter</a>
+                        </li>
+                        <li>
+                            <a href="#">Instagram</a>
+                        </li>
+                        <li>
+                            <a href="#">Tiktok</a>
+                        </li>
+                        <li>
+                            <a href="#">Youtube</a>
+                        </li>
+                        <li>
+                            <a href="#">LINE</a>
+                        </li>
+                    </ul>
+                    <ul>
+                        <h4>HUBUNGI KAMI</h4>
+                        <li>
+                            <a href="#">Kontak</a>
+                        </li>
+                        <li>
+                            <a href="#">Cuctomer Service</a>
+                        </li>
+                        <li>
+                            <a href="#">Bantuan pertanyaan</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="tengah-fa">
+                    <ul>
+                        <h4>KONTEN</h4>
+                        <li>
+                            <a href="#">SNMPTN</a>
+                        </li>
+                        <li>
+                            <a href="#">UTBK</a>
+                        </li>
+                        <li>
+                            <a href="#">Ujian Mandiri</a>
+                        </li>
+                        <li>
+                            <a href="#">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#">Download Soal</a>
+                        </li>
+                        <li>
+                            <a href="#">Simulasi UTBK SBMPTN</a>
+                        </li>
+                        <li>
+                            <a href="#">Prolog Materi</a>
+                        </li>
+                        <li>
+                            <a href="#">CPNS</a>
+                        </li>
+                    </ul>
+                    <ul>
+                        <h4>MEMBERSHIP</h4>
+                        <li>
+                            <a href="#">Pesan membership</a>
+                        </li>
+                        <li>
+                            <a href="#">Panduan transaksi</a>
+                        </li>
+                        <li>
+                            <a href="#">Aktivasi membership</a>
+                        </li>
+                        <li>
+                            <a href="#">Konfirmasi pembayaran</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="kanan-fa">
+                    <ul>
+                        <h4>HAK CIPTA</h4>
+                        <li>
+                            <a href="#">Ketentuan Pengguna</a>
+                        </li>
+                        <li>
+                            <a href="#">Kebijakan Privasi</a>
+                        </li>
+                    </ul>
+                    <div class="logo-footer">
+                        <img src="https://abdfaisol.github.io/zenius/img/logo-f.png">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="footer-bawah">
-            <div class="con-fb">
-                <div class="con2-fb">
-                    <div class="isi-c">
-                        <p class="copyright">
-                            PT Zona Edukasi Nusantara, 2020 <br>
-                            logo, merk. dan isi website ini adalah hak cipta PT Zona Edukasi Nusantara
-                        </p>
-                    </div>      
-                </div>
-            </div>
-        </div>
-        <!-- ini bagian footer alias copy right -->
     </div>
-    <!-- Akhir Footer -->
+    <div class="footer-bawah">
+        <div class="con-fb">
+            <div class="con2-fb">
+                <div class="isi-c">
+                    <p class="copyright">
+                        PT Zona Edukasi Nusantara, 2020 <br>
+                        logo, merk. dan isi website ini adalah hak cipta PT Zona Edukasi Nusantara
+                    </p>
+                </div>      
+            </div>
+        </div>
+    </div>
+    <!-- ini bagian footer alias copy right -->
+</div>
+<!-- Akhir Footer -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
