--- a/tugas/lucky/Latihan/Materi/index.html
+++ b/tugas/lucky/Latihan/Materi/index.html
@@ -16,14 +16,14 @@
     <!-- Menu -->
     <div class="head">
         <div class="head1 full-w flex centerMargin">
-            <img src="img/logo-zeniusnet3.png" height="50">
+            <img src="https://abdfaisol.github.io/zenius/img/logo-zeniusnet3.png" height="50">
             <div class="head2">
                 <ul>
-                    <li><a href="tugas/faisol/Sign-up.html">SIGN UP</a></li>
-                    <li><a href="tugas/faisol/log-in.html">LOG IN</a></li>
+                    <li><a href="https://abdfaisol.github.io/zenius/tugas/faisol/Sign-up.html">SIGN UP</a></li>
+                    <li><a href="https://abdfaisol.github.io/zenius/tugas/faisol/log-in.html">LOG IN</a></li>
                     <li>MEMBERSHIP
                         <ul>
-                            <li><a href="tugas/faisol/membership.html">beli</a></li>
+                            <li><a href="https://abdfaisol.github.io/zenius/tugas/faisol/membership.html">beli</a></li>
                             <li>beli</li>
                             <li>beli</li>
                         </ul>
@@ -255,7 +255,7 @@
                                                                     <div class="col-sm-3">
                                                                         <ul>
                                                                             <li><a href="">Title</a></li>
-                                                                            <li><a href="tugas\lucky\Latihan\Materi">beliKinematika</a></li>
+                                                                            <li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Materi">Kinematika</a></li>
                                                                             <li><a href="">List</a></li>
                                                                             <li><a href="">List</a></li>
                                                                             <li><a href="">List</a></li>
@@ -406,7 +406,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="tugas\lucky\Latihan\BelajarMandiri">Belajar Mandiri</a>
+                                <a class="nav-link" href="https://abdfaisol.github.io/zenius/tugas/lucky/BelajarMandiri">Belajar Mandiri</a>
                             </li>
                         </ul>
                         <form class="form-inline my-2 my-lg-0 relative">
@@ -437,7 +437,7 @@
 
             <div class="box">
                 <div class="materi1">
-                    <a href="tugas/faisol/matematika.html">Postulat Dasar</a>
+                    <a href="https://abdfaisol.github.io/zenius/tugas/faisol/matematika.html">Postulat Dasar</a>
                 </div>
             </div>
 
@@ -610,7 +610,7 @@
                         </li>
                     </ul>
                     <div class="logo-footer">
-                        <img src="img/logo-f.png">
+                        <img src="https://abdfaisol.github.io/zenius/img/logo-f.png">
                     </div>
                 </div>
             </div>
