--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- Menu -->
 	<div class="head">
 		<div class="head1 full-w flex centerMargin">
-			<img src="img/logo-zeniusnet3.png" height="50">
+			<img src="tugas/faisol/img/logo-zeniusnet3.png" height="50">
 			<div class="head2">
 				<ul>
 					<li><a href="tugas/faisol/Sign-up.html">SIGN UP</a></li>
