--- a/tugas/faisol/Sign-up.html
+++ b/tugas/faisol/Sign-up.html
@@ -19,11 +19,11 @@
 			<img src="img/logo-zeniusnet3.png" height="50">
 			<div class="head2">
 				<ul>
-					<li><a href="tugas/faisol/Sign-up.html">SIGN UP</a></li>
-					<li><a href="tugas/faisol/log-in.html">LOG IN</a></li>
+					<li><a href="Sign-up.html">SIGN UP</a></li>
+					<li><a href="log-in.html">LOG IN</a></li>
 					<li>MEMBERSHIP
 						<ul>
-							<li><a href="tugas/faisol/membership.html">beli</a></li>
+							<li><a href="membership.html">beli</a></li>
 							<li>beli</li>
 							<li>beli</li>
 						</ul>
