--- a/tugas/faisol/menu.html
+++ b/tugas/faisol/menu.html
@@ -17,15 +17,14 @@
 			<img src="img/logo-zeniusnet3.png" height="50">
 			<div class="head2">
 				<ul>
-					<li>SIGN UP</li>
-					<li>LOG IN</li>
+					<li><a href="Sign-up.html">SIGN UP</a></li>
+					<li><a href="log-in.html">LOG IN</a></li>
 					<li>MEMBERSHIP
 						<ul>
-							<li>beli</li>
+							<li><a href="membership.html">beli</a></li>
 							<li>beli</li>
 							<li>beli</li>
 						</ul>
-
 					</li>
 				</ul>
 			</div>
@@ -253,7 +252,7 @@
 																<div class="col-sm-3">
 																	<ul>
 																		<li><a href="">Title</a></li>
-																		<li><a href="">Kinematika</a></li>
+																		<li><a href="tugas/lucky/Latihan/Materi">Kinematika</a></li>
 																		<li><a href="">List</a></li>
 																		<li><a href="">List</a></li>
 																		<li><a href="">List</a></li>
