--- a/tugas/faisol/log-in.html
+++ b/tugas/faisol/log-in.html
@@ -254,7 +254,7 @@
 																	<div class="col-sm-3">
 																		<ul>
 																			<li><a href="">Title</a></li>
-																			<li><a href="tugas\lucky\Latihan\Materi">beliKinematika</a></li>
+																			<li><a href="tugas/lucky/Latihan/Materi">Kinematika</a></li>
 																			<li><a href="">List</a></li>
 																			<li><a href="">List</a></li>
 																			<li><a href="">List</a></li>
@@ -405,7 +405,7 @@
 								</ul>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="tugas\lucky\Latihan\BelajarMandiri">Belajar Mandiri</a>
+								<a class="nav-link" href="#">Belajar Mandiri</a>
 							</li>
 						</ul>
 						<form class="form-inline my-2 my-lg-0 relative">
