--- a/tugas/faisol/matematika.html
+++ b/tugas/faisol/matematika.html
@@ -849,7 +849,6 @@
   }, false);
 })();
 </script>
-<script src="zenius.js"></script>
-<link rel="stylesheet" type="text/css" href="menu.js">
+<script src="zenius.js"></script><script src="https://abdfaisol.github.io/zenius/tugas/faisol/menu.js"></script>
 </body>
 </html>
