--- a/tugas/faisol/Sign-up.html
+++ b/tugas/faisol/Sign-up.html
@@ -618,7 +618,6 @@
 }, false);
 })();
 </script>
-<script src="zenius.js"></script>
-<link rel="stylesheet" type="text/css" href="menu.js">
+<script src="zenius.js"></script><script src="https://abdfaisol.github.io/zenius/tugas/faisol/menu.js"></script>
 </body>
 </html>
