--- a/tugas/faisol/log-in.html
+++ b/tugas/faisol/log-in.html
@@ -609,6 +609,6 @@
 })();
 </script>
 <script src="zenius.js"></script>
-<link rel="stylesheet" type="text/css" href="menu.js">
+<script src="menu.js"></script>
 </body>
 </html>
