--- a/tugas/lucky/Latihan/BelajarMandiri/index.html
+++ b/tugas/lucky/Latihan/BelajarMandiri/index.html
@@ -16,7 +16,7 @@
     <!-- Menu -->
     <div class="head">
         <div class="head1 full-w flex centerMargin">
-            <img src="https://abdfaisol.github.io/zenius/img/logo-zeniusnet3.png" height="50">
+            <img src="https://abdfaisol.github.io/zenius/tugas/faisol/img/logo-zeniusnet3.png" height="50">
             <div class="head2">
                 <ul>
                     <li><a href="https://abdfaisol.github.io/zenius/tugas/faisol/Sign-up.html">SIGN UP</a></li>
@@ -618,7 +618,6 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://abdfaisol.github.io/zenius/tugas/faisol/menu.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script><script src="https://abdfaisol.github.io/zenius/tugas/faisol/menu.js"></script>
   </body>
 </html>
