--- a/tugas/faisol/Sign-up.html
+++ b/tugas/faisol/Sign-up.html
@@ -255,7 +255,7 @@
 																	<div class="col-sm-3">
 																		<ul>
 																			<li><a href="">Title</a></li>
-																			<li><a href="tugas\lucky\Latihan\Materi">beliKinematika</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">beliKinematika</a></li>
 																			<li><a href="">List</a></li>
 																			<li><a href="">List</a></li>
 																			<li><a href="">List</a></li>
