--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
 																<div class="row">
 																	<div class="col-sm-3">
 																		<ul>
-																			<li><a href="">Title</a></li>
-																			<li><a href="">List</a></li>
-																			<li><a href="">List</a></li>
-																			<li><a href="">List</a></li>
-																			<li><a href="">List</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">Title</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">Kinematika</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">Kinematika</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">Kinematika</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">Kinematika</a></li>
 																		</ul>
 																	</div>
 																	<div class="col-sm-3">
 																		<ul>
-																			<li><a href="">Title</a></li>
-																			<li><a href="">List</a></li>
-																			<li><a href="">List</a></li>
-																			<li><a href="">List</a></li>
-																			<li><a href="">List</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">Title</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">Kinematika</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">Kinematika</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">Kinematika</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">Kinematika</a></li>
 																		</ul>
 																	</div>
 																	<div class="col-sm-3">
