--- a/tugas/faisol/log-in.html
+++ b/tugas/faisol/log-in.html
@@ -72,11 +72,11 @@
 																<div class="row">
 																	<div class="col-sm-3">
 																		<ul>
-																			<li><a href="">Title</a></li>
-																			<li><a href="">List</a></li>
-																			<li><a href="">List</a></li>
-																			<li><a href="">List</a></li>
-																			<li><a href="">List</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">Title</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">List</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">List</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">List</a></li>
+																			<li><a href="https://abdfaisol.github.io/zenius/tugas/lucky/Latihan/Materi/">List</a></li>
 																		</ul>
 																	</div>
 																	<div class="col-sm-3">
