--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 					<li>MEMBERSHIP
 						<ul>
 							<li><a href="tugas/faisol/membership.html">beli</a></li>
-							<li>beli</li>
-							<li>beli</li>
+							<li>Konfirmasi Pembayaran</li>
+							<li><a href="tugas/yogi/aktivasi.html">Aktivasi</li>
 						</ul>
 
 					</li>
