--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<ul>
 								<li><a href="https://abdfaisol.github.io/zenius/tugas/faisol/membership.html">Beli</a></li>
 								<li><a href="">Konfirmasi Pembyaran</a></li>
-								<li><a href="">Aktivasi</a></li>
+								<li><a href="https://abdfaisol.github.io/zenius/tugas/yogi/aktivasi.html">Aktivasi</a></li>
 							</ul>
 						</li>
 					</ul>
